Revamp index.html for modern responsive design
Updated the HTML structure and content of the index.html file, including meta tags, styles, and sections for a modern responsive website.

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ To deploy quickly: upload `index.html` to GitHub Pages, Netlify, or Vercel.
             <p class="small muted" style="margin-top:10px">Or email us directly at <strong>hello@example.com</strong></p>
           </div>
 
-          <aside style="background:var(--card);padding:18px;border-radius:12px">
+          <aside style="background:var(--card);padding:18px;border-radius:12px;width:200px">
             <h4 style="margin-top:0">Office</h4>
             <div class="small muted">Remote-first. Headquartered in: Mumbai, India</div>
             <div style="margin-top:14px">
@@ -313,3 +313,4 @@ To deploy quickly: upload `index.html` to GitHub Pages, Netlify, or Vercel.
 
 </body>
 </html>
+
